--- a/css/style.css
+++ b/css/style.css
@@ -2089,9 +2089,10 @@ a {
 }
 
 .pagination-block {
-    margin-top: 51px;
+    margin-top: 56px;
     font-weight:500;
-    margin-right: 21px;
+    margin-right: 18px;
+    margin-bottom: 33px;
 
 }
 
@@ -2109,7 +2110,7 @@ a {
 
 .pagination-item {
     display: block;
-    margin:0 0 0 0;
+    margin: 0px 0 0 3px;
 }
 
 .pagination-item a {
@@ -2159,15 +2160,6 @@ a {
 .next a:active {
     background-color:transparent;
 }
-
-
-
-
-
-
-
-
-
 
 .main-footer {
     display: -webkit-box;
